syntax = "proto3";

package new_transaction;

// ENUMS

enum Controller {
    BANK = 0;
    STAKE = 1;
    SPOT = 2;
    CONSENSUS = 3;
}

enum RequestType {
    PAYMENT = 0;
    CREATE_ASSET = 1;
    CREATE_ORDERBOOK = 2;
    MARKET_ORDER = 3;
    LIMIT_ORDER = 4;
    UPDATE_ORDER = 5;
    CANCEL_ORDER = 6;
}

// STRUCTS

message Version {
    uint32 major = 1;
    uint32 minor = 2;
    uint32 patch = 3;
}

// SIGNED TRANSACTION INTERFACE

message NewSignedTransaction {
    NewTransaction transaction = 1;
    bytes signature = 2;
}

// TRANSACTION INTERFACE

message NewTransaction {
    Version version = 1;
    bytes sender = 2;
    Controller target_controller = 3;
    RequestType request_type = 4;
    bytes recent_block_hash = 5;
    uint64 gas = 6;
    bytes request_bytes = 7;
}